Jetpack Connect: Fix spacing and sizes on mobile site topic step

--- a/client/jetpack-connect/style.scss
+++ b/client/jetpack-connect/style.scss
@@ -109,7 +109,8 @@ $colophon-height: 50px;
 	}
 
 	.site-topic__content {
-		
+		padding-bottom: 2px;
+
 		.form-fieldset {
 			position: relative;
 		}
@@ -120,6 +121,12 @@ $colophon-height: 50px;
 			&:focus {
 				box-shadow: 0 0 0 2px var( --color-jetpack-light );
 			}
+		}
+
+		.button {
+			font-size: 16px;
+			padding-top: 12px;
+			padding-bottom: 14px;
 		}
 	}
 }
